# waz

./: .gitattributes  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  about.hbs  cliff.toml
.github/: STAKEHOLDERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_ssh_tmux.yml  04_ssh_legacy.yml  config.yml
.github/workflows/: README.md  release_configurations.json  stale.yml  zap_release.yml
app/: Cargo.toml  build.rs
app/DockTilePlugin/: Info.plist  Makefile  WazDockTilePlugin.h  WazDockTilePlugin.m
app/i18n/: PROGRESS.md
app/src/: app_menus.rs  app_state.rs  appearance.rs  crash_recovery.rs  debug_dump.rs  font_fallback.rs  i18n.rs  lib.rs  local_managed_secrets.rs  menu.rs  palette.rs  profiling.rs  resource_limits.rs  root_view.rs  server_time.rs  voltron.rs  warp_managed_paths_watcher.rs  wasm_nux_dialog.rs
crates/http_client/: Cargo.toml
docs/: migrate-from-warp.ja.md  migrate-from-warp.md  migrate-from-warp.zh-CN.md  roadmap.ja.md  roadmap.md  roadmap.zh-CN.md
script/: analyze-prompt-cache.ps1  generate_changelog  run  setup-merge-drivers.sh  validate_tmp_schema.sh
script/linux/: bundle  (+5 more)
shell/: waz.bash  waz.fish  waz.zsh
specs/: tmp_ai_integration.md
src/: ask.rs  config.rs  context.rs  db.rs  generate.rs  hint.rs  import.rs  llm.rs  main.rs  predict.rs  resolve.rs  run.rs  runnables.rs  session.rs
themes/: one_dark.yaml  tokyo_night.yaml
website/: README.md  astro.config.mjs  package-lock.json  package.json
(+801 files in other folders)
