[package]
name = "waz"
version = "0.1.0"
edition = "2021"
description = "Warp-style command prediction for any terminal"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }
toml = "0.8"
