[package]
name = "waz"
version = "0.1.5"
edition = "2021"
description = "Warp-style command prediction and command palette for any terminal — ghost-text autosuggestions, AI assistant, and interactive TUI"
license = "MIT"
repository = "https://github.com/codeitlikemiley/waz"
homepage = "https://github.com/codeitlikemiley/waz"
readme = "README.md"
keywords = ["terminal", "command-prediction", "shell", "tui", "ai"]
categories = ["command-line-utilities", "command-line-interface"]
authors = ["Uriah Galang"]
rust-version = "1.70"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }
toml = "0.8"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
libc = "0.2"
